Add fiction index and supporting files for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,202 +1,65 @@
-<!DOCTYPE html>
-<html lang="es-MX">
+<!doctype html>
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>El Informador ñ Seguridad y Justicia | FiscalÌa documenta 8 casos de fraude esotÈrico en Guadalajara</title>
-  <meta name="description" content="FiscalÌa de Jalisco informa sobre ocho casos de fraude esotÈrico en Guadalajara. Nota periodÌstica de formato digital con interacciÛn del lector.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Ficci√≥n ‚Äî Presuntas estafas en Guadalajara, Jalisco</title>
+  <meta name="description" content="Ficha ficticia publicada como material de novela. No es real.">
   <style>
-    :root{
-      --bg:#f7f7f9; --card:#ffffff; --ink:#1e1e22; --muted:#6b6b77; --accent:#0b57d0; --accent-ink:#0a3ea8;
-      --danger:#c62828; --success:#2e7d32; --border:#e6e6ee; --tag:#0b57d010;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.6}
-    header{background:#0b57d0;color:#fff}
-    .topbar{max-width:980px;margin:0 auto;padding:12px 20px;display:flex;align-items:center;gap:16px}
-    .brand{font-weight:700;letter-spacing:.3px}
-    .brand .dot{opacity:.85}
-    nav a{color:#fff;text-decoration:none;margin-right:14px;font-weight:600;opacity:.95}
-    nav a:hover{opacity:1;text-decoration:underline}
-    .section-tag{background:var(--tag);color:#fff;border:1px solid #ffffff33;border-radius:999px;padding:3px 10px;font-size:.85rem}
-    .container{max-width:780px;margin:28px auto;padding:0 20px}
-    .article-card{background:var(--card);border:1px solid var(--border);border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
-    .article-head{padding:22px 24px 10px;border-bottom:1px solid var(--border)}
-    .kicker{color:var(--muted);text-transform:uppercase;letter-spacing:.8px;font-size:.8rem;font-weight:700}
-    .title{font-family:Merriweather,Georgia,serif;font-size:1.9rem;line-height:1.25;margin:8px 0 6px}
-    .sub{color:var(--muted);font-size:1.05rem}
-    .meta{display:flex;flex-wrap:wrap;gap:12px;margin-top:10px;color:var(--muted);font-size:.92rem}
-    .meta .date{font-weight:600;color:#333}
-    .hero{display:block;width:100%;height:220px;background:
-      linear-gradient(0deg, rgba(11,87,208,.08), rgba(11,87,208,.08)),
-      url('https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?auto=format&fit=crop&w=1600&q=60') center/cover;
-      border-top-left-radius:12px;border-top-right-radius:12px}
-    .article-body{padding:22px 24px}
-    .article-body h3{font-family:Merriweather,Georgia,serif;font-size:1.25rem;margin:18px 0 8px}
-    .article-body p{margin:10px 0}
-    .quote{border-left:3px solid var(--accent);padding-left:12px;color:#333;background:#f5f7ff;border-radius:8px 0 0 8px}
-    .notice{background:#fff5f5;border:1px solid #ffe0e0;color:#6b0f0f;padding:10px 12px;border-radius:8px;margin:14px 0}
-    .tools{display:flex;flex-wrap:wrap;gap:10px;margin:16px 0}
-    .btn{appearance:none;border:none;border-radius:8px;padding:10px 14px;font-weight:700;cursor:pointer}
-    .btn-primary{background:var(--accent);color:#fff}
-    .btn-primary:hover{background:var(--accent-ink)}
-    .btn-outline{background:#fff;border:1px solid var(--border);color:#222}
-    .tag{display:inline-block;background:#eef3ff;color:#1b3e9a;border:1px solid #dbe6ff;padding:4px 10px;border-radius:999px;font-size:.82rem;margin-right:8px}
-    .comments{margin-top:10px;border-top:1px solid var(--border);padding-top:14px}
-    .comment{border:1px solid var(--border);border-radius:10px;padding:10px 12px;margin:8px 0;background:#fff}
-    .comment small{color:var(--muted)}
-    footer{border-top:1px solid var(--border);margin-top:26px}
-    .foot{max-width:780px;margin:0 auto;padding:16px 20px;color:var(--muted);font-size:.88rem}
-    .foot a{color:var(--accent-ink);text-decoration:none}
-    .foot a:hover{text-decoration:underline}
-    .disclaimer{font-size:.8rem;margin-top:6px;opacity:.9}
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; max-width: 900px; margin: 40px auto; line-height: 1.6; padding: 0 20px; color:#111; background:#fff;}
+    header { border-bottom: 1px solid #ddd; margin-bottom: 20px; padding-bottom: 12px; }
+    h1 { margin: 0 0 6px 0; font-size: 1.8rem; }
+    .meta { color: #666; font-size: .95rem; }
+    .disclaimer { background:#fff3cd; border:1px solid #ffe8a1; padding:12px; margin:16px 0; border-radius:6px; }
+    .lead { font-weight:600; margin: 8px 0 18px; }
+    section { margin-bottom: 18px; }
+    footer { border-top:1px solid #eee; margin-top: 28px; padding-top: 12px; color:#555; font-size:.9rem; }
+    .evidence { background:#f9f9f9; border:1px solid #eee; padding:12px; border-radius:6px; }
+    a { color:#0366d6; text-decoration:none; }
+    .badge { display:inline-block; background:#e9ecef; color:#333; padding:3px 8px; border-radius:12px; font-size:.8rem; margin-left:6px; }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Presuntas estafas en Guadalajara, Jalisco: fragmento ficticio <span class="badge">FICCI√ìN</span></h1>
+    <div class="meta">Publicado como material de ficci√≥n ‚Äî Novela (2025)</div>
+  </header>
 
-<header>
-  <div class="topbar">
-    <div class="brand">El Informador<span class="dot"> ï Guadalajara</span></div>
-    <nav>
-      <a href="#">Portada</a>
-      <a href="#">Seguridad</a>
-      <a href="#">Justicia</a>
-      <a href="#">OpiniÛn</a>
-    </nav>
-    <span class="section-tag">Seguridad y Justicia</span>
+  <div class="disclaimer" role="note" aria-live="polite">
+    <strong>AVISO IMPORTANTE:</strong> Esta p√°gina forma parte de una obra de ficci√≥n. Cualquier persona, lugar, entidad o hecho descrito es totalmente ficticio. No representa a personas reales ni debe interpretarse como un informe period√≠stico ni legal.
   </div>
-</header>
 
-<main class="container">
-  <article class="article-card">
-    <div class="hero" aria-hidden="true"></div>
-    <div class="article-head">
-      <div class="kicker">Exclusiva</div>
-      <h1 class="title">FiscalÌa documenta 8 casos de fraude esotÈrico en Guadalajara</h1>
-      <p class="sub">Alejandro N. y Jacinto N. seÒalados como responsables; uno con antecedentes en Puente Grande por robo y extorsiÛn.</p>
-      <div class="meta">
-        <span class="date">13 de septiembre de 2025</span>
-        <span>RedacciÛn | El Informador ñ Guadalajara</span>
-        <span class="tag">#Fraude</span>
-        <span class="tag">#Guadalajara</span>
-        <span class="tag">#Justicia</span>
-      </div>
+  <p class="lead">Vecinos y personajes en Guadalajara aparecen en relatos que exploran din√°micas de enga√±o y desconfianza; este texto utiliza el formato period√≠stico como recurso narrativo dentro de una novela.</p>
+
+  <section>
+    <h2>Qu√© ocurre (versi√≥n ficticia)</h2>
+    <p>En la ficci√≥n, durante un ciclo de semanas, varios vecinos describen un mismo modus operandi: contacto a trav√©s de anuncios, solicitud de adelanto y promesas de servicios que no se cumplen. Estos episodios sirven para desarrollar la trama y explorar las consecuencias emocionales en los personajes.</p>
+  </section>
+
+  <section>
+    <h2>Evidencia (en la novela)</h2>
+    <div class="evidence">
+      <ul>
+        <li>Capturas de mensajes y anuncios (ficticias) que ilustran la interacci√≥n entre personajes.</li>
+        <li>Recibos y documentos inventados que forman parte del dossier narrativo.</li>
+        <li>Testimonios reconstruidos con nombres cambiados; todos los elementos son fabricados para la historia.</li>
+      </ul>
     </div>
+  </section>
 
-    <div class="article-body">
-      <h3>Panorama general</h3>
-      <p><strong>Guadalajara, Jalisco.</strong> La FiscalÌa del Estado informÛ que se han documentado ocho casos de fraude esotÈrico en la Zona Metropolitana de Guadalajara, vinculados a supuestas ìoperaciones energÈticas espiritualesî en las que se exigÌa dinero y joyas a las vÌctimas.</p>
-      <p>De acuerdo con las investigaciones, los principales seÒalados son <strong>Alejandro N.</strong> y <strong>Jacinto N.</strong>, quienes durante meses se presentaron como ìsanadoresî y ìguÌas espiritualesî. Bajo esa fachada, ofrecÌan rituales para curar enfermedades graves, atraer prosperidad y resolver problemas familiares. A cambio, pedÌan sumas considerables de dinero y objetos de valor, principalmente oro.</p>
+  <section>
+    <h2>Extractos (ficticios)</h2>
+    <p>‚ÄúMe dijeron que todo estaba listo si pagaba un anticipo. Nunca respondieron despu√©s‚Äù, dice un personaje conocido en la novela como ‚ÄúLa Voz del Barrio‚Äù.</p>
+  </section>
 
-      <h3>El modus operandi</h3>
-      <p>Las autoridades detallan que los acusados empleaban un patrÛn de manipulaciÛn definido. Primero, la <strong>presiÛn emocional</strong>: persuadÌan a las vÌctimas de que corrÌan riesgo inmediato de muerte o de desarrollar enfermedades severas óc·ncer, males cardÌacos, padecimientos ìincurablesîó si no accedÌan a realizar el ritual de manera urgente. El miedo a perder la vida o ver a un familiar enfermar se utilizaba para forzar la entrega de dinero y joyas.</p>
-      <p>La segunda fase eran las <strong>promesas irreales</strong>: garantizaban curaciones instant·neas, matrimonios felices o riqueza s˙bita, supeditando todo a la ìenergÌa espiritualî que afirmaban canalizar.</p>
-      <p>Luego seguÌa la <strong>obtenciÛn de datos personales</strong>: pedÌan fotografÌas con el argumento de ìdetectar energÈticamente dÛnde estaba el malî. Esas im·genes se usaban despuÈs para intimidar y extorsionar óamenazando con difundirlas o manipularlas si no se cumplÌan nuevas exigencias econÛmicasó adem·s de solicitar domicilios, estado civil y datos laborales para ejercer control.</p>
-      <p>El cierre era financiero: <strong>pagos irregulares</strong> mediante transferencias a cuentas personales, depÛsitos en efectivo y entrega de joyas u oro, sin comprobantes oficiales.</p>
+  <section>
+    <h2>Recomendaciones (reales)</h2>
+    <p>Aunque el contenido es ficticio, recomendamos a los lectores reales seguir buenas pr√°cticas: verificar antecedentes antes de hacer pagos, exigir contrato por escrito y, ante irregularidades reales, acudir a las autoridades competentes.</p>
+  </section>
 
-      <div class="quote">
-        <p><strong>ReflexiÛn:</strong> Ning˙n verdadero sanador espiritual exige dinero, joyas ni establece fechas lÌmite para rituales. La pr·ctica autÈntica se sostiene en confianza y respeto, no en el miedo ni en amenazas de desgracias o enfermedades. Si alguien condiciona tu bienestar a pagos inmediatos, no es un guÌa: es un estafador.</p>
-      </div>
-
-      <h3>Testimonios</h3>
-      <p>Una afectada contÛ que entregÛ sus ahorros y un anillo de oro familiar tras ser convencida de que su salud dependÌa de un ìtrabajo espiritual urgenteî. Otra persona seÒalÛ que fue presionada para vender su automÛvil y entregar el dinero como parte de una ìofrenda energÈticaî. ìMe dijeron que si no entregaba el oro, mi familia sufrirÌa una desgraciaî, declarÛ, bajo anonimato.</p>
-
-      <h3>Acciones de la autoridad</h3>
-      <p>La FiscalÌa exhortÛ a denunciar. Se reciben reportes en la sede de Calle 14 #2550, Zona Industrial, Guadalajara, y se recomienda contactar a la PolicÌa CibernÈtica cuando el fraude se origine en redes sociales. Las instituciones bancarias pueden activar protocolos antifraude para bloquear transferencias.</p>
-
-      <h3>Impacto social</h3>
-      <p>El caso de <strong>Alejandro N.</strong> y <strong>Jacinto N.</strong> generÛ alarma en la comunidad tapatÌa. Vecinos de las colonias donde operaban afirman que se presentaban como ìsanadoresî y organizaban reuniones en casas particulares, atrayendo principalmente a personas mayores y mujeres en situaciÛn vulnerable.</p>
-      <p>Se revelÛ, adem·s, que <strong>Alejandro N.</strong> cuenta con una orden de aprehensiÛn vigente y antecedentes penales: ya habÌa sido recluido en el penal de Puente Grande por delitos de robo y extorsiÛn. Este historial refuerza la preocupaciÛn de las autoridades sobre la reincidencia y peligrosidad de los seÒalados.</p>
-
-      <div class="tools">
-        <button class="btn btn-primary" id="reportBtn">Denunciar estafa</button>
-        <button class="btn btn-outline" id="shareBtn">Compartir</button>
-      </div>
-      <div id="alertBox" class="notice" style="display:none;">Gracias por tu reporte. Este portal registrÛ tu alerta localmente. Para denuncias formales, acude a la autoridad competente.</div>
-
-      <div class="comments">
-        <h3>Comentarios</h3>
-        <form id="commentForm">
-          <label for="nick"><strong>Nombre (opcional):</strong></label><br>
-          <input id="nick" type="text" placeholder="Tu nombre o alias" style="width:100%;padding:8px;border:1px solid #ddd;border-radius:8px"><br><br>
-          <label for="msg"><strong>Tu comentario:</strong></label><br>
-          <textarea id="msg" rows="4" placeholder="Comparte tu opiniÛn..." style="width:100%;padding:8px;border:1px solid #ddd;border-radius:8px"></textarea><br><br>
-          <button class="btn btn-primary" type="submit">Publicar</button>
-          <button class="btn btn-outline" type="button" id="clearBtn">Limpiar</button>
-        </form>
-        <div id="commentList"></div>
-      </div>
-    </div>
-  </article>
-</main>
-
-<footer>
-  <div class="foot">
-    © 2025 El Informador ñ Guadalajara. Todos los derechos reservados.
-    <div class="disclaimer">Obra de ficciÛn interactiva: los personajes y eventos son parte de una novela digital.</div>
-    <div>Contacto editorial: <a href="#">redaccion@elinformador.mx</a></div>
-  </div>
-</footer>
-
-<script>
-  // Report button
-  document.getElementById('reportBtn').addEventListener('click', () => {
-    document.getElementById('alertBox').style.display = 'block';
-    window.scrollTo({ top: document.getElementById('alertBox').offsetTop - 90, behavior: 'smooth' });
-  });
-
-  // Share button
-  document.getElementById('shareBtn').addEventListener('click', async () => {
-    const shareData = {
-      title: document.title,
-      text: 'Lee esta nota digital: Fraude esotÈrico en Guadalajara',
-      url: window.location.href
-    };
-    if (navigator.share) {
-      try { await navigator.share(shareData); } catch (e) {}
-    } else {
-      alert('Copia y comparte: ' + window.location.href);
-    }
-  });
-
-  // Comments (local only)
-  const form = document.getElementById('commentForm');
-  const list = document.getElementById('commentList');
-  const clearBtn = document.getElementById('clearBtn');
-
-  function renderComments() {
-    const items = JSON.parse(localStorage.getItem('comments') || '[]');
-    list.innerHTML = '';
-    items.forEach((c, i) => {
-      const div = document.createElement('div');
-      div.className = 'comment';
-      div.innerHTML = '<strong>' + (c.nick || 'AnÛnimo') + '</strong> <small>ï ' + new Date(c.ts).toLocaleString() + '</small><br>' + c.msg;
-      list.appendChild(div);
-    });
-  }
-
-  form.addEventListener('submit', (e) => {
-    e.preventDefault();
-    const nick = document.getElementById('nick').value.trim();
-    const msg = document.getElementById('msg').value.trim();
-    if (!msg) return;
-    const items = JSON.parse(localStorage.getItem('comments') || '[]');
-    items.unshift({ nick, msg, ts: Date.now() });
-    localStorage.setItem('comments', JSON.stringify(items));
-    document.getElementById('msg').value = '';
-    renderComments();
-  });
-
-  clearBtn.addEventListener('click', () => {
-    document.getElementById('nick').value = '';
-    document.getElementById('msg').value = '';
-  });
-
-  renderComments();
-</script>
-
+  <footer>
+    <p><strong>Nota del autor:</strong> Este contenido es una obra literaria. No debe usarse como fuente period√≠stica ni como base para acciones legales. Autor: [Tu nombre o seud√≥nimo]. Fecha de publicaci√≥n: 2025.</p>
+    <p>Contacto del autor (opcional): <a href="mailto:tu-correo@ejemplo.com">tu-correo@ejemplo.com</a></p>
+  </footer>
 </body>
 </html>
-<meta charset="utf-8">
